--- a/style/sections/_s-sticky-contacts.scss
+++ b/style/sections/_s-sticky-contacts.scss
@@ -13,8 +13,8 @@
 
 .sticky-contacts {
     position: fixed;
-    top: 80%;
-    left: calc(100% - var(--opener-size));
+    bottom: 120px;
+    right: 0;
     z-index: 400;
     max-width: max-content;
     display: flex;
